--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_home">Home</string>
     <string name="title_settings">Settings</string>
     <string name="title_premium">Premium</string>
+    <string name="title_activity_complete_schedule">CompleteScheduleActivity</string>
 </resources>
