--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,21 @@
     <string name="app_name">My Training Schedules</string>
     <string name="action_settings">Settings</string>
     <string name="base_url">http://65.21.49.16:8080</string>
+    <string name="newExercise"><u>Create new exercise</u></string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+
+    <string-array name="categories">
+        <item>Chest</item>
+        <item>Legs</item>
+        <item>Shoulders</item>
+        <item>Back</item>
+        <item>Arms</item>
+        <item>Abs</item>
+    </string-array>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
